[gd_scene load_steps=8 format=2]

[ext_resource path="res://Circular_saw_blade.png" type="Texture" id=1]
[ext_resource path="res://SawBladeArea.gd" type="Script" id=2]
[ext_resource path="res://SawBlade.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 28.9879

[sub_resource type="CircleShape2D" id=3]
radius = 29.0454

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 184.073, 36.0542 )

[node name="SawBladeArea" type="Area2D"]
collision_layer = 0
collision_mask = 256
script = ExtResource( 2 )

[node name="SawBlade" type="KinematicBody2D" parent="."]
collision_layer = 0
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="SawBlade"]
scale = Vector2( 0.03, 0.03 )
frames = SubResource( 1 )

[node name="PlayerCollision" type="Area2D" parent="SawBlade"]
collision_layer = 256
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SawBlade/PlayerCollision"]
shape = SubResource( 2 )

[node name="KineticBodyShape" type="CollisionShape2D" parent="SawBlade"]
shape = SubResource( 3 )

[node name="ExitShape" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )
[connection signal="area_exited" from="." to="SawBlade" method="_on_SawBladeArea_area_exited"]
[connection signal="body_entered" from="SawBlade/PlayerCollision" to="SawBlade" method="_on_PlayerCollision_body_entered"]
